# romea-ros-path-tools

./: CMakeLists.txt  Dockerfile  README.md  compose.yaml  f2c_path_generator.py  package.xml
doc/: romea_path_matching.md  romea_path_tools.md  tiara_format.md
doc/data/: example.traj  generate_path.py
romea_path_tools/: __init__.py  f2c_path_generator.py  kml.py  path.py  path_planning_utils.py  path_v2.py  plotter.py  romea_path.py
scripts/: annotate  convert  merge  path_from_swaths  planner  record  show
